# grax

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: testing.yml  tests.yml
examples/: simple.py
grax/: __init__.py  checks.py  gp.py  module.py  test_checks.py  testing.py  types.py  typing.py
grax/kernels/: __init__.py  base.py  squared_exponential.py  test_squared_exponential.golden  test_squared_exponential.pkl  test_squared_exponential.py
grax/likelihoods/: __init__.py  base.py  gaussian.py
grax/means/: __init__.py  base.py  zero.py
grax/utils/: __init__.py  checks.py  repr.py
tests/: conftest.py  test_checks.py  test_gaussian.py  test_gp.py  test_squared_exponential.pkl  test_squared_exponential.py  test_zero.py  testing.py
tests/goldens/test_gaussian/: test_goldens_0.npy
tests/goldens/test_gp/: test_golden_log_likelihood_0.npy  test_golden_predict_0.npy  test_goldens_0.npy
tests/goldens/test_squared_exponential/: test_goldens_0.npy  test_goldens_0.pkl  test_goldens_1.npy  test_goldens_1.pkl
