[project]
name = "grax"
description = "A simple GP package using python and JAX"
license = {file = "LICENSE"}
readme = "README.md"
authors = [{name = "Matthew W. Hoffman"}]
dynamic = ["version"]
requires-python = ">=3.10"

dependencies = [
  "jax",
  "flax"
]

[dependency-groups]
dev = [
  "coverage[toml]",
  "ipython",
  "matplotlib",
  "mypy",
  "pytest",
  "pytest-cov",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "grax.__version__"}

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "tests"
addopts = [
  "--cov=grax",
  "--import-mode=importlib",
  "--verbose",
]

[tool.mypy]
files = "grax,tests,examples"

[tool.coverage.run]
branch = true
